--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,14 @@
 html, body {
     margin: 0;
     background: #f3f3f3;
+    box-sizing: border-box;
 
 }
 
 #wrapper {
     overflow: hidden;
-    margin: 0 auto;
+    margin: 100px auto;
+    width: 500px;
 
 }
 
@@ -22,11 +24,6 @@ section {
     float: left;
 
     display: inline-flex;
-/*    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -o-flexbox;
-    display: -webkit-flex;*/
 
     align-items: center;
     justify-content: center;
@@ -50,11 +47,22 @@ button {
     float: left;
 }
 
+#volume-control label {
+
+    width: 100%;
+    height: 20px;
+
+    margin: 10px;
+    padding: 5px;
+
+}
+
 #volume-control input {
+
     writing-mode: bt-lr; /* IE */
     -webkit-appearance: slider-vertical; /* WebKit */
-    width: 8px;
+    width: 100%;
     height: 175px;
     padding: 5px;
-    justify-content: flex-end;
+
 }
