--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ html, body {
     margin: 0;
     background: #f3f3f3;
     box-sizing: border-box;
+    font-family: sans-serif;
 
 }
 
@@ -14,12 +15,16 @@ html, body {
 
 section {
     height: 350px;
+    background: #34495e;
 }
 
 #pads {
-    background: blue; 
+    /*background: blue; */
 
     width: 350px;
+
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
 
     float: left;
 
@@ -32,14 +37,37 @@ section {
 }
 
 button {
-    background: orange;
+
+    background: #bdc3c7;
+    border: 1px solid black;
+    border-radius: 8px;
+    
     margin: 10px;
+    padding: 5px;
+
     width: 80px;
     height: 80px;
+
+    outline: none;
+    transition: all .07s ease;
+}
+
+button:active {
+    background: #f1c40f;
+}
+
+button kbd {
+    display: block;
+    margin: 0 auto;
+    font-size: 24px;
 }
 
 #volume-control {
-    background: green;
+    /*background: green;*/
+
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+
     margin: 0 auto;
     display: inline-flex;
 
@@ -49,20 +77,21 @@ button {
 
 #volume-control label {
 
+    display: block;
     width: 100%;
     height: 20px;
 
-    margin: 10px;
+    margin: 10px auto;
     padding: 5px;
 
 }
 
 #volume-control input {
-
+    display: block;
     writing-mode: bt-lr; /* IE */
     -webkit-appearance: slider-vertical; /* WebKit */
     width: 100%;
     height: 175px;
+    margin: 20px auto;
     padding: 5px;
-
 }
