--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,9 @@ button kbd {
     border-bottom-right-radius: 10px;
 
     margin: 0 auto;
-    display: inline-flex;
+    display: flex;
+    align-content: center;
+    justify-content: flex-start;
 
     width: 150px;
     float: left;
@@ -81,21 +83,27 @@ button kbd {
 
 #volume-control h4 {
 
+    background: red;
+
     display: block;
     width: 100%;
-    height: 20px;
+    height: 40px;
+    float: left;
 
     margin: 10px auto;
     padding: 5px;
 
 }
 
+
 #volume-control input {
+
+
     display: block;
     writing-mode: bt-lr; /* IE */
     -webkit-appearance: slider-vertical; /* WebKit */
-    width: 100%;
-    height: 175px;
+    width: 150px;
+    min-height: 250px;
     margin: 20px auto;
     padding: 5px;
     float: left;
