--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,45 +67,42 @@ button kbd {
 }
 
 #volume-control {
-    /*background: green;*/
+
 
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 
     margin: 0 auto;
-    display: flex;
-    align-content: center;
-    justify-content: flex-start;
+
 
     width: 150px;
     float: left;
 }
 
-#volume-control h4 {
-
-    background: red;
-
+#volume-control label {
     display: block;
-    width: 100%;
-    height: 40px;
-    float: left;
+    margin: 0 auto;
+    padding: 50px 0px;
+    font-size: 16px;
+    text-align: center;
+}
 
-    margin: 10px auto;
-    padding: 5px;
+.slider-wrapper {
+/*  display: inline-block;*/
+  width: 20px;
+  height: 150px;
+  padding: 0;
+  margin: 0 auto;
 
 }
 
+.slider-wrapper input {
+  width: 150px;
+  height: 20px;
+  transform-origin: 75px 75px;
+  transform: rotate(-90deg);
+  padding: 0px;
 
-#volume-control input {
 
-
-    display: block;
-    writing-mode: bt-lr; /* IE */
-    -webkit-appearance: slider-vertical; /* WebKit */
-    width: 150px;
-    min-height: 250px;
-    margin: 20px auto;
-    padding: 5px;
-    float: left;
-    clear: both;
 }
+
