--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ html, body {
     margin: 0;
     background: #f3f3f3;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: "Overpass", sans-serif;
 
 }
 
@@ -71,6 +71,8 @@ button kbd {
 
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
+
+
 
     margin: 0 auto;
 
