--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,15 @@
 html, body {
     margin: 0;
-    background: #f3f3f3;
     box-sizing: border-box;
     font-family: "Overpass", sans-serif;
 
 }
+
+body {
+    background: url("images/background.jpg");
+    width: 100vw;
+}
+
 
 input, label {
     display: block;
